name:                while-lang-parser

version:             0.1.0.0

synopsis:            Parser for the While language.

-- description:         

homepage:            github.com/davnils/while-lang-parser

license:             BSD3

license-file:        LICENSE

author:              David Nilsson And Patrik Berggren

maintainer:          nilsson.dd+code@gmail.com

category:            Language

build-type:          Simple

cabal-version:       >=1.8


library
  exposed-modules:     Language.While.Parser, Language.While.Types
  build-depends:       base >=4.5, parsec >=3.1, indents >=0.3
  
